out.log
GHCi, version 9.2.4: https://www.haskell.org/ghc/  :? for help
ghci> [1 of 1] Compiling Main             ( Foo.hs, interpreted )

Foo.hs:3:18: error:
    Cannot parse data constructor in a data/newtype declaration:
      {frankAField :: a, frankBField :: b}
  |
3 | data Frank a b = {frankAField :: a, frankBField :: b}
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Failed, no modules loaded.
ghci> Leaving GHCi.
